# CIS-MAP-V2

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html
.claude/: launch.json  settings.local.json
3d/: index.html  main.js
css/: style.css
data/: baked_paths.json  navmesh_data.json
engine_cpp/: CMakeLists.txt  main.cpp
floorplans/: cad_notes.json
js/: app.js  shared.js
tools/: extract_cad_notes.py  navmesh_mapper.html
tools/defunct/: midi-visualizer.html  pdf_to_walls.py  region_color.html
